[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image/IconeRien.png" type="Texture" id=1]
[ext_resource path="res://Scene/Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Code/Roulette.gd" type="Script" id=3]
[ext_resource path="res://Image/Fleche.png" type="Texture" id=4]
[ext_resource path="res://Image/Machine Roll.png" type="Texture" id=5]

[node name="Roulette" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 192, 0 )
scale = Vector2( 1.33333, 1.5 )
texture = ExtResource( 5 )

[node name="Icone" type="Sprite" parent="Sprite"]
position = Vector2( -9.53674e-06, -4.76837e-07 )
scale = Vector2( 0.75, 0.666667 )
texture = ExtResource( 1 )

[node name="Camera" parent="." instance=ExtResource( 2 )]

[node name="CbPiece" type="Label" parent="."]
margin_left = 288.0
margin_top = -64.0
margin_right = 448.0
margin_bottom = -32.0
text = "Combien de pieces ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NbPiece" type="Label" parent="."]
margin_left = 352.0
margin_top = -16.0
margin_right = 416.0
margin_bottom = 48.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlecheHaut" type="Sprite" parent="."]
position = Vector2( 384, -16 )
texture = ExtResource( 4 )

[node name="FlecheBas" type="Sprite" parent="."]
position = Vector2( 384, 48 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="Chance" type="Label" parent="."]
margin_left = -32.0
margin_top = -64.0
margin_right = 66.0
margin_bottom = -32.0
text = "50% de Chance"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
